# wolf_controller

./: CMakeLists.txt  README.md  controller_plugin.xml  package.xml  wolf_controller_plugin.xml
include/ros/wolf_controller/: controller_plugin.h  controller_wrapper.h
include/ros/wolf_controller/devices/: interface.h  joy.h  keyboard.h  ros.h  twist.h
include/ros/wolf_controller_ros/: controller_plugin.h  controller_wrapper.h
include/ros/wolf_controller_ros/devices/: joy.h  ros.h
include/ros2/wolf_controller/: controller_plugin.h  controller_wrapper.h
include/ros2/wolf_controller/devices/: joy.h  keyboard.h  ros.h  twist.h
include/ros2/wolf_controller_ros/: controller_plugin.h  controller_wrapper.h
include/ros2/wolf_controller_ros/devices/: joy.h  keyboard.h  ros.h  twist.h
include/wolf_controller_ros/: controller_wrapper.h
include/wolf_controller_ros/devices/: interface.h  keyboard.h
launch/: wolf_controller_bringup.launch  wolf_controller_bringup.launch.xml
launch/include/: wolf_controller_ns.xml
params/: config.ros2.yaml
plotjuggler/: controller.ros2.xml  controller.xml
rviz/: controller.rviz  controller.rviz2.rviz
scripts/: keyboard_node
scripts/ros/: keyboard_node
scripts/ros2/: keyboard_node
src/: controller_plugin.cpp  controller_wrapper.cpp
src/ros/: controller_plugin.cpp  controller_wrapper.cpp
src/ros2/: controller_plugin.cpp  controller_wrapper.cpp  plot_node.cpp
