<?xml version="1.0" encoding="UTF-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wolf_controller_ros</name>
  <version>0.0.1</version>
  <description>WoLF: Whole-body Locomotion Framework for quadruped robots. This package contains the whole-body controller.</description>

  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>CC BY-NC-ND 4.0</license>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend>tf2</depend>
  <depend>controller_interface</depend>
  <depend>realtime_tools</depend>
  <depend>rviz_visual_tools</depend>
  <depend>wolf_controller_utils</depend>
  <depend>wolf_hardware_interface</depend>
  <depend>wolf_controller_core</depend>
  <depend>wolf_wbid</depend>
  <depend>wolf_msgs</depend>
  <depend>wolf_estimation</depend>
  <depend>geometry_msgs</depend>

  <depend condition="$ddynamic_reconfigure_FOUND == True">ddynamic_reconfigure</depend>
  <depend condition="$rt_logger_FOUND == True">rt_logger</depend>
  <depend condition="$ocs2_msgs_FOUND == True">ocs2_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <controller_interface plugin="${prefix}/controller_plugin.xml"/>
  </export>

</package>
